---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    -
  Changes:
    - The mod now makes sure that the main interface fits onto the player's screen when first creating or joining a game
  Bugfixes:
    - Fixed a missing tooltip string on the dialog submit button

---------------------------------------------------------------------------------------------------
Version: 1.1.21
Date: 04. 07. 2021
  Features:
    - Implemented the ability to add recipes from top level ingredients
  Changes:
    - Changed certain modal dialogs to use an 'X-to-close' button in the top right corner instead of a 'Back' button in the bottom left corner
    - The name and icon of the cargo and fluid wagons are now shown on the 'Wagons/m' view state button tooltip
    - Line percentages now default to 100 instead of 0 when left blank
  Bugfixes:
    - Fixed an issue where Request Depots from Klonan's Transport Drones could not be selected a product (Thanks MCP!)
    - Fixed that the Deep Storage Unit mod's internal recipes were not being hidden
    - Fixed an issue where the number of subfactories in the archive could have been reported incorrectly
    - Fixed that the pause mode would not work correctly while using the in-game editor
    - Fixed a rare crash when searching recipes or items
    - Fixed a few minor graphical inconsistencies

---------------------------------------------------------------------------------------------------
Version: 1.1.20
Date: 11. 04. 2021
  Bugfixes:
    - Fixed frequent desync on loading saves. I'm truly sorry about me taking so long to fix this.
    - Fixed that the dimming overlay would be stuck in front of the main window, blocking any interaction with it
    - Fixed that the background dimmer would be incorrectly sized on display scales other than 100%